After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 707811 - lib: Fix leak when adding GIcon to geocoding results
lib: Fix leak when adding GIcon to geocoding results
Status: RESOLVED FIXED
Product: geocode-glib
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: geocode-glib maintainer(s)
geocode-glib maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-09-09 22:58 UTC by Bastien Nocera
Modified: 2013-09-16 17:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lib: Fix leak when adding GIcon to geocoding results (920 bytes, patch)
2013-09-09 22:58 UTC, Bastien Nocera
accepted-commit_now Details | Review

Description Bastien Nocera 2013-09-09 22:58:07 UTC
.
Comment 1 Bastien Nocera 2013-09-09 22:58:09 UTC
Created attachment 254527 [details] [review]
lib: Fix leak when adding GIcon to geocoding results
Comment 2 Zeeshan Ali 2013-09-09 23:14:31 UTC
Review of attachment 254527 [details] [review]:

ack