lib: Fix leak when adding GIcon to geocoding results

https://bugzilla.gnome.org/show_bug.cgi?id=707811